Upgrade build to Gradle 9 with Java 8 target (#567)
* Upgrade build to Gradle 9 with Java 8 target

* Fix Android API compatibility check

* Fix ProGuard tasks for Gradle 9

* Simplify Android API validation input

* Use Android compile jar task output for API validation